<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:orientation="vertical"
              android:padding="20dp"
              android:visibility="gone"
              android:id="@+id/forgot_password_layout"
              android:layout_height="fill_parent">

    <TextView android:layout_width="wrap_content"
              android:text="@string/request_text_email"
              style="@style/text_remind_password"
              android:paddingBottom="10dp"
              android:layout_height="wrap_content"/>

    <EditText android:id="@+id/request_edit_text_mail"
              android:maxLength="50"
              style="@style/edit_text"
              android:inputType="textEmailAddress"
              android:hint="@string/request_edit_text_mail"
              android:password="true"/>

    <View android:layout_width="fill_parent"
          android:layout_height="20dp"/>

    <Button android:layout_width="fill_parent"
            android:id="@+id/restoreButton"
            style="@style/button"
            android:text="@string/recoverPassword"
            android:layout_height="wrap_content"/>


</LinearLayout>