<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/login_layout"
              android:visibility="gone"
              android:background="#FF00FF"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">


    <EditText android:layout_width="fill_parent"
              android:id="@+id/edit_text_login"
              android:hint="@string/edit_text_email"
              android:layout_height="wrap_content"/>

    <EditText android:layout_width="fill_parent"
              android:id="@+id/edit_text_password"
              android:hint="@string/edit_text_password"
              android:password="true"
              android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:weightSum="2"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <Button android:layout_width="0dp"
                android:text="@string/enter"
                android:id="@+id/enter"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        <!--<Button android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:id="@+id/registration"-->
                <!--android:text="@string/registration"-->
                <!--android:layout_height="wrap_content"/>-->

    </LinearLayout>

</LinearLayout>