<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:minWidth="280dp"
              android:background="@drawable/dialog_back"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="wrap_content"
            android:text="@string/share_title"
            style="@style/share_dialog_header_text"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content"/>

    <View
            android:layout_height="1dp"
            android:background="@drawable/menu_back"
            android:layout_width="wrap_content"/>

    <LinearLayout
            android:layout_height="wrap_content"
            android:id="@+id/shareAccount"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_width="fill_parent">

        <TextView
                android:layout_width="fill_parent"
                android:text="@string/shareByAccount"
                android:gravity="left"
                style="@style/share_dialog_text"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
            android:layout_height="1dp"
            android:visibility="gone"
            android:id="@+id/shareAccountView"
            android:background="@drawable/menu_back"
            android:layout_width="wrap_content"/>

    <LinearLayout
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="left"
            android:layout_width="fill_parent">

        <TextView
                android:layout_width="fill_parent"
                android:id="@+id/shareService"
                android:gravity="left"
                style="@style/share_dialog_text"
                android:text="@string/shareByService"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
            android:layout_height="1dp"
            android:background="@drawable/menu_back"
            android:layout_width="wrap_content"/>

    <Button
            android:layout_width="fill_parent"
            android:paddingTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"/>


</LinearLayout>